--- a/account.ui/src/app/app.component.html
+++ b/account.ui/src/app/app.component.html
@@ -16,8 +16,8 @@ bar across the top of the page...
     <li ngbDropdown>
       <button ngbDropdownToggle class="btn btn-sm btn-dark remove-caret" id="btnMenu"><span class="navbar-toggler-icon"></span></button>
       <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-         <button ngbDropdownItem routerLink="/standingorders">Standing OrdersButton</button>
-         <button ngbDropdownItem routerLink="/accounts">Account details</button>
+         <button ngbDropdownItem routerLink="/standingorders">Standing Orders</button>
+         <button ngbDropdownItem routerLink="/">Account details</button>
          <button ngbDropdownItem routerLink="/">Check items (maybe)</button>
          <button ngbDropdownItem routerLink="/">Extracts aka. Search (eventually)</button>
       </div>
