--- a/account.ui/src/app/standingorders/standingorders.component.html
+++ b/account.ui/src/app/standingorders/standingorders.component.html
@@ -2,6 +2,7 @@
 <div class="standingorders" *ngIf="isStandorders()">
   <table class="table table-striped table-sm">
     <thead class="thead-inverse">
+    <tr><th>Standing Orders</th></tr>
     <tr><th>Entry Date</th><th>Pay Date</th><th>Amount</th><th>Memo</th><th>Account</th><th>Period</th><th>Count</th><th>Type</th></tr>
     </thead>
     <tbody>
