--- a/account.ui/src/app/standingorders/standingorders.component.html
+++ b/account.ui/src/app/standingorders/standingorders.component.html
@@ -1,4 +1,6 @@
 <!-- account.ui/src/app/standingorders/standingorders.component.html -->
+
+<standingorder-editor></standingorder-editor>
 <div class="standingorders" *ngIf="isStandorders()">
   <table class="table table-striped table-sm">
     <thead class="thead-inverse">
