--- a/account.ui/src/app/standingorder-editor/standingorder-editor.component.html
+++ b/account.ui/src/app/standingorder-editor/standingorder-editor.component.html
@@ -1,13 +1,68 @@
-<form [formGroup]="soForm"  (ngSubmit)="onSubmit()">
 
-<label for="sodesc">Memo: </label><input id="sodesc" type="text" formControlName="sodesc">
-<label for="soentrydate">Entry Date: </label><input id="soentrydate" type="text" formControlName="soentrydate">
-<label for="sonextpaydate">Pay Date: </label><input id="sonextpaydate" type="text" formControlName="sonextpaydate">
-<label for="soamount">Amount: </label><input id="soamount" type="text" formControlName="soamount">
-<label for="accountname">Account: </label><input id="accountname" type="text" formControlName="accountname">
-<label for="soperiod">Period: </label><input id="soperiod" type="text" formControlName="soperiod">
-<label for="socount">Repeat: </label><input id="socount" type="text" formControlName="socount">
-<label for="sotfrtype">Type: </label><input id="sotfrtype" type="text" formControlName="sotfrtype">
-<button type="submit" [disabled]="!soForm.valid">Submit</button>
-</form>
+<div class="container border border-warning rounded pt-3 pb-3">
+    <form [formGroup]="soForm"  (ngSubmit)="onSubmit()">
+      <div class="row align-items-center">
+         <label class="col-sm-1 col-form-label" for="soentrydate">Entry Date: </label>
+         <div class="col-sm-10"> 
+            <div class="input-group flex-nowrap">       
+               <input  ngbDatepicker #dt="ngbDatepicker" class="form-control-date form-control form-control-sm" id="soentrydate" type="text" formControlName="soentrydate"  placeholder="YYYY-MM-DD">
+               <div class="input-group-append">
+                  <button class="btn btn-outline-secondary bi bi-calendar3" (click)="dt.toggle()" type="button"></button>
+               </div>            
+            </div>
+         </div>
+      </div>
 
+        <div class="row align-items-center">
+         <label class="col-sm-1 col-form-label" for="sonextpaydate">Pay Date: </label>
+         <div class="col-sm-10">        
+                <input class="form-control form-control-sm" id="sonextpaydate" type="text" formControlName="sonextpaydate">
+            </div>
+        </div>
+
+      
+      <div class="row align-items-center">
+         <label class="col-sm-1 col-form-label" for="sodesc">Memo: </label>
+         <div class="col-sm-10">
+               <input  class="form-control form-control-sm" id="sodesc" type="text" formControlName="sodesc">
+         </div>
+      </div>
+
+        <div class="row align-items-center">
+         <label class="col-sm-1 col-form-label" for="soamount">Amount: </label>
+         <div class="col-sm-10">        
+                <input class="form-control form-control-sm" id="soamount" type="text" formControlName="soamount">
+            </div>
+        </div>
+
+        <div class="row align-items-center">
+         <label class="col-sm-1 col-form-label" for="accountname">Account: </label>
+         <div class="col-sm-10">        
+                <input class="form-control form-control-sm" id="accountname" type="text" formControlName="accountname">
+            </div>
+        </div>
+        
+        <div class="row align-items-center">
+         <label class="col-sm-1 col-form-label" for="soperiod">Period: </label>
+         <div class="col-sm-10">        
+                <input class="form-control form-control-sm" id="soperiod" type="text" formControlName="soperiod">
+            </div>
+        </div>
+        
+        <div class="row align-items-center">
+         <label class="col-sm-1 col-form-label" for="socount">Repeat: </label>
+         <div class="col-sm-10">        
+                <input class="form-control form-control-sm" id="socount" type="text" formControlName="socount">
+            </div>
+        </div>
+        
+        <div class="row align-items-center">
+         <label class="col-sm-1 col-form-label" for="sotfrtype">Type: </label>
+         <div class="col-sm-10">        
+                <input class="form-control form-control-sm" id="sotfrtype" type="text" formControlName="sotfrtype">
+            </div>
+        </div>
+        <button type="submit" [disabled]="!soForm.valid">Submit</button>
+    </form>
+
+</div>
