--- a/account.ui/src/styles.css
+++ b/account.ui/src/styles.css
@@ -10,3 +10,8 @@
    no longer part of bootstrap (this has wasted a few hours)
  */
 /* @import "../node_modules/bootstrap/dist/css/bootstrap.min.css"; */
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
