still battling material to get data into the model from the formcontrols

--- a/account.ui/src/app/so-edit-mat/so-edit-mat.component.html
+++ b/account.ui/src/app/so-edit-mat/so-edit-mat.component.html
@@ -41,7 +41,11 @@
       <div class="row">
          <mat-form-field  appearance="outline" class="full-width">
             <mat-label>Account</mat-label>
-            <input matInput placeholder="" formControlName="accountname">
+            <mat-select formControlName="accountid">
+               @for (acc of accounts; track acc) {
+                 <mat-option [value]="acc.id">{{ acc.name }}</mat-option>
+               }
+             </mat-select>             
          </mat-form-field>
       </div>
       <div class="row">
