--- a/account.ui/src/app/so-edit-mat/so-edit-mat.component.css
+++ b/account.ui/src/app/so-edit-mat/so-edit-mat.component.css
@@ -4,7 +4,8 @@
 }
 
 .so-card {
-  width: 50%;
+  width: 100%;
+
   min-width: 400px;
   margin: 0px auto;
   margin-top: 0px; 
@@ -30,4 +31,11 @@
 
 .col:last-child {
   margin-right: 0;
+}
+
+.mat-mdc-dialog-content
+{
+   height:100%;
+   max-height: 100%;
+   padding:10px;
 }
