--- a/account.ui/src/app/standingorders/standingorders.component.html
+++ b/account.ui/src/app/standingorders/standingorders.component.html
@@ -1,10 +1,18 @@
 <!-- account.ui/src/app/standingorders/standingorders.component.html -->
+<div class="container-fluid">
+   <div class="row">
+     <div class="col text-start">
+      <h3>Standing Orders</h3>
+     </div>
+     <div class="col text-end">
+      <button class="btn btn-secondary bi bi-plus-square" (click)="addso()"></button>
+     </div>
+   </div>
+ </div>
 
-<so-edit-mat></so-edit-mat>
 <div class="standingorders" *ngIf="isStandorders()">
   <table class="table table-striped table-sm">
     <thead class="thead-inverse">
-    <tr><th>Standing Orders</th></tr>
     <tr><th>Entry Date</th><th>Pay Date</th><th>Amount</th><th>Memo</th><th>Account</th><th>Period</th><th>Count</th><th>Type</th></tr>
     </thead>
     <tbody>
@@ -18,10 +26,9 @@
        <td>{{so.socount}}</td>
        <td>{{so.sotfrtype}}</td>
        <td>
-         <button class="acc-table-btn" (click)="open(so)"><i class="bi bi-pencil-square" aria-hidden="true"></i></button>
+         <button class="acc-table-btn" (click)="editso(so)"><i class="bi bi-pencil-square" aria-hidden="true"></i></button>
        </td>
        </tr>
     </tbody>
   </table>
 </div>
-
