--- a/account.ui/src/app/so-edit-mat/so-edit-mat.dialog.html
+++ b/account.ui/src/app/so-edit-mat/so-edit-mat.dialog.html
@@ -1,4 +1,4 @@
 <!-- app/so-edit-mat/so-edit-mat.dialog.html -->
 <mat-dialog-content>
-   <so-edit-mat [origSOitem]="data"></so-edit-mat>
+   <so-edit-mat (submittedEvent)="closeDialog($event)" [origSOitem]="data"></so-edit-mat>
 </mat-dialog-content>
