--- a/account.ui/src/app/so-edit-mat/so-edit-mat.component.html
+++ b/account.ui/src/app/so-edit-mat/so-edit-mat.component.html
@@ -83,6 +83,7 @@
       </div>   
     </mat-card-content>
     <mat-card-actions>
+      <button mat-raised-button color="secondary" type="reset" (click)="onCancel()">Cancel</button>
       <button mat-raised-button color="primary" type="submit" [disabled]="!soForm.valid">Submit</button>
     </mat-card-actions>
   </mat-card>
