--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -40,7 +40,7 @@
                    class="form-control-date form-control form-control-sm" placeholder="DD/MM/YYYY">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button" title="date">
-                <img src="../assets/images/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;" title="date"/>
+                <img src="assets/images/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;" title="date"/>
               </button>
             </div> 
 
