--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -39,8 +39,8 @@
                    name="txDate" id="txDate" type="text" 
                    class="form-control-date form-control form-control-sm" placeholder="DD/MM/YYYY">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button" title="date">
-                <img src="assets/images/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;" title="date"/>
+              <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button" title="open calendar">
+                <i class="bi bi-calendar3"></i>
               </button>
             </div> 
 
@@ -125,7 +125,7 @@
                          class="form-control-date form-control form-control-sm" placeholder="DD/MM/YYYY">
                 <div class="input-group-append">
                    <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button">
-                      <img src="assets/images/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;"/>
+                     <i class="bi bi-calendar3"></i>
                    </button>
                 </div> 
            </div>
