fix broken scroll, fix nav bar display on phone

--- a/account.ui/src/app/app.component.html
+++ b/account.ui/src/app/app.component.html
@@ -12,7 +12,7 @@ the app title would be outside the ul so maybe the 'nav' actually defines the
 bar across the top of the page...
  -->
  <nav ngbNav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <ul class="navbar-nav">
+
     <li ngbDropdown>
       <button ngbDropdownToggle class="btn btn-sm btn-dark remove-caret" id="btnMenu"><span class="navbar-toggler-icon"></span></button>
       <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -28,10 +28,10 @@ bar across the top of the page...
           <button ngbDropdownItem *ngFor="let a of accounts" [routerLink]="['transactions', a.id]">{{a.name}}</button>
         </div>
     </li>
-  </ul> 
+
   
   <div class="ms-auto order-last">
-      <a class="navbar-brand" href="#">{{title}}<small> {{versiontxt}}</small></a>
+      <a class="navbar-brand fs-7" href="#">{{title}}<small> {{versiontxt}}</small></a>
   </div>
 </nav>
 
