--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -12,7 +12,7 @@
        <td class="account-amount">{{txn.amount}}</td>
        <td class="account-amount" [ngClass]="{'account-negbalance': txn.balance.startsWith('-')}" *ngIf="desktopDisplay">{{txn.balance}}</td>
        <td *ngIf="desktopDisplay">
-       <button *ngIf="!txn.locked" class="acc-table-btn" (click)="open(content, txn)"><i class="bi bi-pencil-square" aria-hidden="true"></i></button>
+       <button class="acc-table-btn" (click)="open(content, txn)"><i class="bi bi-pencil-square" aria-hidden="true"></i></button>
        </td>
        </tr>
     </tbody>
@@ -155,7 +155,24 @@
                  <span class="acc-modal-label" id="lbamount">Amount Debited</span>
               </div>
               <input [(ngModel)]="this.updateTxn.amount" name="txAmount" id="txAmount" type="number" class="form-control form-control-sm" placeholder="-ve number for Credit" aria-label="-ve number for Credit"  aria-describedby="lbamount">
-           </div>          
+           </div> 
+
+           <div class="acc-modal-row">
+
+            <div class="form-check">
+              <label class="form-check-label" for="chkLocked">Locked</label>
+              <input class="form-check-input" type="checkbox" value="" name="chkLocked" id="chkLocked" 
+                   (change)="lockedChange()" 
+                   [checked]="this.updateTxn.locked"
+                   [(ngModel)]="this.updateTxn.locked">
+            </div>            
+            <div class="input-group-prepend">
+               <span class="acc-modal-label" id="lbStatementref">Statement</span>
+            </div>
+            <input [(ngModel)]="this.updateTxn.statementref" name="txStatementref" id="txStatementref" type="text" class="form-control form-control-sm" placeholder="statement reference" aria-label="statement reference"  aria-describedby="lbStatementref">
+          </div> 
+         
+           
         </form>
      </div>
        <div class="modal-footer">
