--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -176,18 +176,18 @@ related to using angular with the modal
                   </div>
                   <input [(ngModel)]="this.updateTxn.statementref" name="txStatementref" id="txStatementref" type="text"
                      class="form-control form-control-sm" placeholder="statement reference" aria-label="statement reference"  aria-describedby="lbStatementref">
+
+                  <div class="ps-2">
+                     <input type="checkbox" class="btn-check" id="chkLocked" name="chkLocked" autocomplete="off"
+                     (change)="lockedChange()"
+                     [checked]="this.updateTxn.locked"
+                     [(ngModel)]="this.updateTxn.locked">
+                     <label class="btn btn-outline-success" for="chkLocked">{{this.updateTxn.locked ? 'Verified' : 'Unverified'}}</label>
+   
+                  </div>                     
                </div>
 
-               <div class="acc-modal-row">
 
-                  <div class="form-check pe-2">
-                     <input class="form-check-input " type="checkbox" value="" name="chkLocked" id="chkLocked"
-                        (change)="lockedChange()"
-                        [checked]="this.updateTxn.locked"
-                        [(ngModel)]="this.updateTxn.locked">
-                     <label class="form-check-label" for="chkLocked">Locked</label>
-                  </div>
-               </div>
             </form>
          </div>
          <div class="modal-footer">
