--- a/account.ui/src/app/so-edit-mat/so-edit-mat.component.css
+++ b/account.ui/src/app/so-edit-mat/so-edit-mat.component.css
@@ -7,14 +7,21 @@
   width: 100%;
 
   min-width: 400px;
-  margin: 0px auto;
-  margin-top: 0px; 
+
+  box-shadow:inset 0px 0px 0px 1px rgb(179, 176, 176);
+  border: 3px solid  white !important;
+  border-radius: 30px !important;
 }
 
 .so-card-head 
 {
    margin-top: 0px; 
    margin-bottom: 10px;
+}
+
+.mat-mdc-button-base 
+{
+   margin-left: 8px;
 }
 
 .row {
@@ -37,5 +44,8 @@
 {
    height:100%;
    max-height: 100%;
-   padding:10px;
+   padding: 0px 0px 0px 0px !important;
+   overflow: hidden !important;   
+   background-color:  rgba(0, 0, 0, 0.32);
 }
+
