--- a/account.ui/src/app/so-edit-mat/so-edit-mat.component.html
+++ b/account.ui/src/app/so-edit-mat/so-edit-mat.component.html
@@ -4,87 +4,88 @@
      ng add @angular/material
      
    -->
-<form [formGroup]="soForm" novalidate (ngSubmit)="onSubmit()">
-  <mat-card class="so-card">
-    <mat-card-header class="so-card-head">
-      <mat-card-title>Standing Order</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <div class="row">
-         <div class="col">
-            <mat-form-field  appearance="outline" class="full-width">
-               <mat-label>Entry Date</mat-label>
-               <input matInput [matDatepicker]="entrydatepicker" placeholder="yyyy-mm-dd" formControlName="soentrydate">
-               <mat-datepicker-toggle matIconSuffix [for]="entrydatepicker"></mat-datepicker-toggle>
-               <mat-datepicker #entrydatepicker></mat-datepicker>            
-            </mat-form-field>
-         </div>
-         <div class="col">
-            <mat-form-field  appearance="outline" class="full-width">
-               <mat-label>Pay Date</mat-label>
-               <input matInput [matDatepicker]="paydatepicker" placeholder="yyyy-mm-dd" formControlName="sonextpaydate">
-               <mat-datepicker-toggle matIconSuffix [for]="paydatepicker"></mat-datepicker-toggle>
-               <mat-datepicker #paydatepicker></mat-datepicker>  
-            </mat-form-field>
-         </div>
-      </div>
-
-      <div class="row">
-         <div class="col">
-            <mat-form-field  appearance="outline" class="full-width">
-               <mat-label>Amount</mat-label>
-               <input type="number" matInput placeholder="0.00" formControlName="soamount">
-            </mat-form-field>
-         </div>
-         <div class="col">
-            <mat-form-field  appearance="outline" class="full-width">
-               <mat-label>Type</mat-label>
-               <mat-select placeholder="BC" formControlName="sotfrtype">
-                  @for (type of txnTypes; track type) {
-                  <mat-option [value]="type">{{ type }}</mat-option>
-                  }
-               </mat-select>            
-            </mat-form-field>
-         </div>
-      </div>
-      <div class="row">
-         <mat-form-field  appearance="outline" class="full-width">
-            <mat-label>Memo</mat-label>
-            <input matInput placeholder="" formControlName="sodesc">
-         </mat-form-field>
-      </div>
-      <div class="row">
-         <mat-form-field  appearance="outline" class="full-width">
-            <mat-label>Account</mat-label>
-            <mat-select formControlName="account">
-               @for (acc of accounts; track acc) {
-                 <mat-option [value]="acc">{{ acc.name }}</mat-option>
-               }
-             </mat-select>             
-         </mat-form-field>
-      </div>
-      <div class="row">
-         <div class="col">
-            <mat-form-field  appearance="outline" class="full-width">
-               <mat-label>Repeat</mat-label>
-               <input matInput placeholder="1" formControlName="socount">
-            </mat-form-field>
-         </div>
-         <div class="col">
-         <mat-form-field  appearance="outline" class="full-width">
-            <mat-label>Period</mat-label>
-            <mat-select formControlName="soperiod">
-               @for (type of periodTypes; track type) {
-                 <mat-option [value]="type.period">{{ type.desc }}</mat-option>
-               }
-             </mat-select>              
-         </mat-form-field>
-         </div>
-      </div>   
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="secondary" type="reset" (click)="onCancel()">Cancel</button>
-      <button mat-raised-button color="primary" type="submit" [disabled]="!soForm.valid">Submit</button>
-    </mat-card-actions>
-  </mat-card>
-</form>
+   <mat-card class="so-card" appearance="outlined">
+      <mat-card-header class="so-card-head">
+        <mat-card-title>Standing Order</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <form [formGroup]="soForm" novalidate (ngSubmit)="onSubmit()">
+           <div class="row">
+              <div class="col">
+                 <mat-form-field  appearance="outline" class="full-width">
+                    <mat-label>Entry Date</mat-label>
+                    <input matInput [matDatepicker]="entrydatepicker" placeholder="yyyy-mm-dd" formControlName="soentrydate">
+                    <mat-datepicker-toggle matIconSuffix [for]="entrydatepicker"></mat-datepicker-toggle>
+                    <mat-datepicker #entrydatepicker></mat-datepicker>            
+                 </mat-form-field>
+              </div>
+              <div class="col">
+                 <mat-form-field  appearance="outline" class="full-width">
+                    <mat-label>Pay Date</mat-label>
+                    <input matInput [matDatepicker]="paydatepicker" placeholder="yyyy-mm-dd" formControlName="sonextpaydate">
+                    <mat-datepicker-toggle matIconSuffix [for]="paydatepicker"></mat-datepicker-toggle>
+                    <mat-datepicker #paydatepicker></mat-datepicker>  
+                 </mat-form-field>
+              </div>
+           </div>
+  
+           <div class="row">
+              <div class="col">
+                 <mat-form-field  appearance="outline" class="full-width">
+                    <mat-label>Amount</mat-label>
+                    <input type="number" matInput placeholder="0.00" formControlName="soamount">
+                 </mat-form-field>
+              </div>
+              <div class="col">
+                 <mat-form-field  appearance="outline" class="full-width">
+                    <mat-label>Type</mat-label>
+                    <mat-select placeholder="BC" formControlName="sotfrtype">
+                       @for (type of txnTypes; track type) {
+                       <mat-option [value]="type">{{ type }}</mat-option>
+                       }
+                    </mat-select>            
+                 </mat-form-field>
+              </div>
+           </div>
+           <div class="row">
+              <mat-form-field  appearance="outline" class="full-width">
+                 <mat-label>Memo</mat-label>
+                 <input matInput placeholder="" formControlName="sodesc">
+              </mat-form-field>
+           </div>
+           <div class="row">
+              <mat-form-field  appearance="outline" class="full-width">
+                 <mat-label>Account</mat-label>
+                 <mat-select formControlName="account">
+                    @for (acc of accounts; track acc) {
+                    <mat-option [value]="acc">{{ acc.name }}</mat-option>
+                    }
+                 </mat-select>             
+              </mat-form-field>
+           </div>
+           <div class="row">
+              <div class="col">
+                 <mat-form-field  appearance="outline" class="full-width">
+                    <mat-label>Repeat</mat-label>
+                    <input matInput placeholder="1" formControlName="socount">
+                 </mat-form-field>
+              </div>
+              <div class="col">
+              <mat-form-field  appearance="outline" class="full-width">
+                 <mat-label>Period</mat-label>
+                 <mat-select formControlName="soperiod">
+                    @for (type of periodTypes; track type) {
+                    <mat-option [value]="type.period">{{ type.desc }}</mat-option>
+                    }
+                 </mat-select>              
+              </mat-form-field>
+              </div>
+           </div>   
+        </form>
+     </mat-card-content>
+     <mat-card-actions align='end'>
+        <button mat-stroked-button type="reset" (click)="onCancel()">Cancel</button>
+        <button mat-flat-button type="submit" [disabled]="!soForm.valid">Submit</button>
+     </mat-card-actions>
+    </mat-card>
+  
