tweak SO dialog for phone

--- a/account.ui/src/app/so-edit-mat/so-edit-mat.component.css
+++ b/account.ui/src/app/so-edit-mat/so-edit-mat.component.css
@@ -5,9 +5,6 @@
 
 .so-card {
   width: 100%;
-
-  min-width: 400px;
-
   box-shadow:inset 0px 0px 0px 1px rgb(179, 176, 176);
   border: 3px solid  white !important;
   border-radius: 30px !important;
@@ -24,6 +21,22 @@
    margin-left: 8px;
 }
 
+/* On the phone the dialog is displayed with the buttons hidden by the address bar at the bottom of the screen
+   and it is impossible to scroll the page up to reveal them - typical forked up angular material UI design.
+   This is supposed to make it possible to scroll the dialog up to see the buttons so they can be used. 
+   It appears to work in the MS Edge emulator.
+   Alas there appears to no solution for the dialog not displaying in the center of the phone screen even though
+   the width of the dialog is set appropriately - instead it displays half on/half off and must be scrolled
+   into view (yet more forked up angular material UI design). NB The workaround for this is to apply a
+   fixed position when opening the dialog, it's the only to affect the dialog position.
+*/
+.cdk-global-overlay-wrapper {
+   pointer-events: auto;
+   overflow: auto;
+   position: relative;
+   align-items: center;
+ }
+
 .row {
   display: flex;
   flex-direction: row;
@@ -33,7 +46,6 @@
 
 .col {
   flex: 1;
-
 }
 
 .col:last-child {
@@ -45,7 +57,7 @@
    height:100%;
    max-height: 100%;
    padding: 0px 0px 0px 0px !important;
-   overflow: hidden !important;   
+   overflow: auto !important;   
    background-color:  rgba(0, 0, 0, 0.32);
 }
 
