--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -1,7 +1,7 @@
 <!-- account.ui/src/app/transactions/transactions.component.html -->
 <div class="transactions" *ngIf="isTransactions()">
-  <table class="table table-striped table-sm">
-     <thead class="thead-inverse">
+   <table class="table table-striped table-sm">
+      <thead class="thead-inverse">
         <tr>
            <th colspan="3">Transactions for {{activeaccount.name}}</th>
         </tr>
@@ -12,21 +12,35 @@
            <th class="account-amount" *ngIf="desktopDisplay">Balance</th>
            <th *ngIf="desktopDisplay"></th>
         </tr>
-     </thead>
-     <tbody >
+      </thead>
+      <tbody >
         <tr *ngFor="let txn of transactions" [ngClass]="{'table-success': txn.locked}">
            <td class="nowrap">{{txn.date.substring(2)}}</td>
            <td (swipeleft)="open(content, txn)">{{txn.comment}}</td>
            <td class="account-amount">{{txn.amount}}</td>
            <td class="account-amount" [ngClass]="{'account-negbalance': txn.balance.startsWith('-')}" *ngIf="desktopDisplay">{{txn.balance}}</td>
            <td *ngIf="desktopDisplay">
-              <button class="acc-table-btn" (click)="open(content, txn)">
+              <button class="acc-table-btn" type="button" (click)="open(content, txn)" title="edit">
                  <i class="bi bi-pencil-square" aria-hidden="true"></i>
               </button>
            </td>
         </tr>
-     </tbody>
-  </table>
+      </tbody>
+   </table>
+   <div class="text-center text-md-left">
+      <div  class="btn-group" role="group">
+
+         <button class="acc-table-btn" type="button" (click)="nextPage()" title="prev">
+            <i class="bi bi-caret-left-fill" aria-hidden="true"></i>
+         </button>
+         <button class="acc-table-btn" type="button" (click)="prevPage()" title="next">
+            <i class="bi bi-caret-right-fill" aria-hidden="true"></i>
+         </button>  
+         <button class="acc-table-btn" type="button" (click)="firstPage()" title="latest">
+            <i class="bi bi-skip-end-fill" aria-hidden="true"></i>
+         </button>          
+      </div>
+   </div>  
 </div>
 
 <div id="txncontainer" *ngIf="isTransactions()">
