--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -3,7 +3,7 @@
    <table class="table table-striped table-sm">
       <thead class="thead-inverse">
         <tr>
-           <th colspan="3">Transactions for {{activeaccount.name}}</th>
+           <th colspan="6">Transactions for {{activeaccount.name}}</th>
         </tr>
         <tr>
            <th>Date</th>
@@ -29,7 +29,7 @@
          </tr>
       </tbody>
    </table>
-   <div class="text-center text-md-left">
+   <div class="text-center text-md-left pb-3">
       <div  class="btn-group" role="group">
 
          <button class="acc-table-btn" type="button" (click)="nextPage()" title="prev">
