--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -3,7 +3,8 @@
    <table class="table table-striped table-sm">
       <thead class="thead-inverse">
         <tr>
-           <th colspan="6">Transactions for {{activeaccount.name}}</th>
+           <th colspan="4">Transactions for {{activeaccount.name}}</th>
+           <th><button class="btn btn-default" [routerLink]="['viewchecked', activeaccount.id]">Checked{{activeaccount.id}}</button></th>
         </tr>
         <tr>
            <th>Date</th>
