--- a/account.ui/src/app/checked-list/checked-list.component.html
+++ b/account.ui/src/app/checked-list/checked-list.component.html
@@ -20,11 +20,11 @@
             </ng-container>
             <ng-container matColumnDef="amount">
                <th mat-header-cell *matHeaderCellDef>Amount</th>
-               <td mat-cell *matCellDef="let txn">{{txn.amount}}</td>
+               <td mat-cell [ngClass]="{'account-negamount': txn.amount.startsWith('-')}" *matCellDef="let txn">{{txn.amount}}</td>
             </ng-container>
             <ng-container matColumnDef="chkbal">
                <th mat-header-cell *matHeaderCellDef>Chkd Bal</th>
-               <td mat-cell *matCellDef="let txn">{{txn.balance}}</td>
+               <td mat-cell [ngClass]="{'account-negbalance': txn.balance.startsWith('-')}" *matCellDef="let txn">{{txn.balance}}</td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
