--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -2,18 +2,22 @@
 <div class="transactions" *ngIf="isTransactions()">
    <table class="table table-striped table-sm">
       <thead class="thead-inverse">
-        <tr>
-           <th colspan="4">Transactions for {{activeaccount.name}}</th>
-           <th><button class="btn btn-default" [routerLink]="['viewchecked', activeaccount.id]">Checked{{activeaccount.id}}</button></th>
-        </tr>
-        <tr>
+         <tr>
+            <th colspan="5"><h5>Transactions for {{activeaccount.name}}</h5></th>
+            <th>
+               <button class="btn btn-outline-success" [routerLink]="['/viewchecked', activeaccount.id]" title="view checked list">
+                  <i class="bi bi-list-check"></i>
+               </button>
+            </th>
+         </tr>
+         <tr>
            <th>Date</th>
            <th>Memo</th>
            <th *ngIf="desktopDisplay">Ref</th>
            <th class="account-amount">Amount</th>
            <th class="account-amount" *ngIf="desktopDisplay">Balance</th>
            <th class="account-edit" *ngIf="desktopDisplay"></th>
-        </tr>
+         </tr>
       </thead>
       <tbody >
          <tr *ngFor="let txn of transactions" [ngClass]="{'table-success': txn.locked}">
@@ -30,17 +34,16 @@
          </tr>
       </tbody>
    </table>
-   <div class="text-center text-md-left pb-3">
+   <div class="text-center text-md-left pb-2">
       <div  class="btn-group" role="group">
-
-         <button class="acc-table-btn" type="button" (click)="nextPage()" title="prev">
-            <i class="bi bi-caret-left-fill" aria-hidden="true"></i>
+         <button class="btn btn-outline-dark btn-sm" (click)="nextPage()" title="prev">
+            <i class="bi bi-chevron-left"></i>
          </button>
-         <button class="acc-table-btn" type="button" (click)="prevPage()" title="next">
-            <i class="bi bi-caret-right-fill" aria-hidden="true"></i>
+         <button class="btn btn-outline-dark btn-sm" type="button" (click)="prevPage()" title="next">
+            <i class="bi bi-chevron-right"></i>
          </button>  
-         <button class="acc-table-btn" type="button" (click)="firstPage()" title="latest">
-            <i class="bi bi-skip-end-fill" aria-hidden="true"></i>
+         <button class="btn btn-outline-dark btn-sm" type="button" (click)="firstPage()" title="latest">
+            <i class="bi bi-chevron-bar-right"></i>
          </button>          
       </div>
    </div>  
