--- a/account.ui/src/app/checked-list/checked-list.component.html
+++ b/account.ui/src/app/checked-list/checked-list.component.html
@@ -1,7 +1,14 @@
 <!-- account.ui/src/app/checked-list/checked-list.component.html -->
 <mat-card appearance="outlined">
    <mat-card-header>
-      <mat-card-title>Checked Transactions for {{activeaccount.name}}</mat-card-title>
+      <mat-card-title *ngIf="isTransactions()">
+         <div class="title-card-left">Checked Transactions for {{activeaccount.name}}</div>
+         <div class="title-card-right">
+            <button class="btn btn-outline-success btn-sm" [routerLink]="['/transactions', activeaccount.id]" title="transaction list">
+               <i class="bi bi-list"></i>
+            </button>
+         </div>
+      </mat-card-title>
    </mat-card-header>
    <mat-card-content>
       <div class="transactions" *ngIf="isTransactions()">
@@ -31,18 +38,46 @@
             <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
          </table>
          
-         <div class="text-center text-md-left">
-            <div  class="btn-group" role="group">
-               <button class="acc-table-btn" type="button" (click)="nextPage()" title="prev">
-                  <i class="bi bi-caret-left-fill" aria-hidden="true"></i>
+      <!-- should find a way to use Material instead of Bootstrap for this page but once again
+           the lack of comprehensible documentation for how to do this blocks me.
+
+           Google has not provided anything helpful for using bootstrap icons with mat-icon.
+           In fact there is virtually nothing useful at all for how to use it - the examples
+           at https://material.angular.io/components/icon/overview doesn't even work!
+           The examples don't refer to the requirement for something like
+             <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+           in index.html. Obviously that isn't going to work for an off-line page. So without some
+           help with using the icons that are already part of the package mat-icon is a non-starter.
+
+           I stumbled across this:
+           https://www.npmjs.com/package/material-symbols
+           where there is a reference to using it with mat-icon.
+           If it is available offline I'll give it a go...
+
+           npm install material-symbols@latest
+           or, for reduced size
+           npm install @material-symbols/svg-400@latest
+
+           and, of course, this does not work....
+
+           Forking Hell! Adding "import 'material-symbols';" to the .ts files makes it work!
+           Why the FORK don't they say this is needed in the instructions for Angular mat-icon!!!
+           It seems that somewhere completely unrelated to mat-icon they mention that "@import 'material-symbols';"
+           should be added to "styles.css"
+        -->
+         <div class="text-center text-md-left pt-2">
+            <div role="group">
+               <button mat-icon-button (click)="nextPage()" title="prev">
+                  <mat-icon fontSet="material-symbols-rounded">chevron_backward</mat-icon>
                </button>
-               <button class="acc-table-btn" type="button" (click)="prevPage()" title="next">
-                  <i class="bi bi-caret-right-fill" aria-hidden="true"></i>
-               </button>  
-               <button class="acc-table-btn" type="button" (click)="firstPage()" title="latest">
-                  <i class="bi bi-skip-end-fill" aria-hidden="true"></i>
-               </button>          
-            </div>
+               <button mat-icon-button (click)="prevPage()" title="next">
+                  <mat-icon fontSet="material-symbols-rounded">chevron_forward</mat-icon>
+               </button>
+               <button mat-icon-button (click)="firstPage()" title="latest">
+                  <mat-icon fontSet="material-symbols-rounded">last_page</mat-icon>
+               </button>
+            </div> 
+
          </div>  
       </div>
    </mat-card-content>
