--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -73,7 +73,7 @@
               <!-- ng add @angular/localize was required to enable navigation backwards and forwards   -->
               <input ngbDatepicker #dt="ngbDatepicker" [(ngModel)]="txDate"
                  name="txDate" id="txDate" type="text"
-                 class="form-control-date form-control form-control-sm" placeholder="DD/MM/YYYY">
+                 class="form-control-date form-control form-control-sm" placeholder="YYYY-MM-DD">
                  <div class="input-group-append">
                     <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button" title="open calendar">
                        <i class="bi bi-calendar3"></i>
@@ -157,7 +157,7 @@ related to using angular with the modal
                   <!-- ng add @angular/localize was required to enable navigation backwards and forwards   -->
                   <input ngbDatepicker #dt="ngbDatepicker" [(ngModel)]="txDate"
                      name="txUDate" id="txUDate" type="text"
-                     class="form-control-date form-control form-control-sm" placeholder="DD/MM/YYYY">
+                     class="form-control-date form-control form-control-sm" placeholder="YYYY-DD-MM">
                   <div class="input-group-append">
                      <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button">
                         <i class="bi bi-calendar3"></i>
