fix date format placeholder

--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -162,7 +162,7 @@ related to using angular with the modal
                   <!-- ng add @angular/localize was required to enable navigation backwards and forwards   -->
                   <input ngbDatepicker #dt="ngbDatepicker" [(ngModel)]="txUpdDate"
                      name="txUpdDate" id="txUpdDate" type="text"
-                     class="form-control-date form-control form-control-sm" placeholder="YYYY-DD-MM">
+                     class="form-control-date form-control form-control-sm" placeholder="MM/DD/YYYY">
                   <div class="input-group-append">
                      <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button">
                         <i class="bi bi-calendar3"></i>
