--- a/account.ui/src/app/so-edit-mat/so-edit-mat.component.html
+++ b/account.ui/src/app/so-edit-mat/so-edit-mat.component.html
@@ -14,7 +14,7 @@
               <div class="col">
                  <mat-form-field  appearance="outline" class="full-width">
                     <mat-label>Entry Date</mat-label>
-                    <input matInput [matDatepicker]="entrydatepicker" placeholder="yyyy-mm-dd" formControlName="soentrydate">
+                    <input matInput [matDatepicker]="entrydatepicker" placeholder="dd/mm/yyyy" formControlName="soentrydate">
                     <mat-datepicker-toggle matIconSuffix [for]="entrydatepicker"></mat-datepicker-toggle>
                     <mat-datepicker #entrydatepicker></mat-datepicker>            
                  </mat-form-field>
@@ -22,7 +22,7 @@
               <div class="col">
                  <mat-form-field  appearance="outline" class="full-width">
                     <mat-label>Pay Date</mat-label>
-                    <input matInput [matDatepicker]="paydatepicker" placeholder="yyyy-mm-dd" formControlName="sonextpaydate">
+                    <input matInput [matDatepicker]="paydatepicker" placeholder="dd/mm/yyyy" formControlName="sonextpaydate">
                     <mat-datepicker-toggle matIconSuffix [for]="paydatepicker"></mat-datepicker-toggle>
                     <mat-datepicker #paydatepicker></mat-datepicker>  
                  </mat-form-field>
